[package]
name = "mantis-msi2"
version = "2.0.1-rc.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = 2

[lib]
name = "mantis_msi2_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "mantis-msi2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.5", features = ["derive"] }
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"

[build-dependencies]
built = { version = "0.5.1", features = ["git2"] }

[dev-dependencies]
matches = "0.1.9"
rstest = "0.12.0"
tempfile = "3.2.0"
